<resources>
    <string name="app_name">ACL 4 Phase 1</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to ALC 4.0</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="text_name">Walter Onyango</string>
    <string name="todo">TODO</string>
    <string name="track">Track: Android</string>
    <string name="country">Country: Kenya</string>
    <string name="username">Slack Username: @wakello</string>
    <string name="phone">Phone Number: +254721758943</string>
    <string name="email">Email: wakello@gmail.com</string>
    <string name="title_activity_about">About ALC</string>
    <string name="title_activity_about_alc">About ALC</string>
</resources>
