<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MyProfile"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/activity_my_profile">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="202dp"
        android:layout_height="178dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pic" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="casual"
        android:text="@string/text_name"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <TextView
        android:id="@+id/text_track"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="casual"
        android:text="@string/track"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/text_name"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <TextView
        android:id="@+id/text_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="casual"
        android:text="@string/country"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/text_track"
        app:layout_constraintStart_toStartOf="@+id/text_track"
        app:layout_constraintTop_toBottomOf="@+id/text_track" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="casual"
        android:text="@string/email"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/text_country"
        app:layout_constraintStart_toStartOf="@+id/text_country"
        app:layout_constraintTop_toBottomOf="@+id/text_country" />

    <TextView
        android:id="@+id/text_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="casual"
        android:text="@string/phone"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/text_email"
        app:layout_constraintStart_toStartOf="@+id/text_email"
        app:layout_constraintTop_toBottomOf="@+id/text_email" />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="casual"
        android:text="@string/username"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/text_phone"
        app:layout_constraintStart_toStartOf="@+id/text_phone"
        app:layout_constraintTop_toBottomOf="@+id/text_phone" />

</android.support.constraint.ConstraintLayout>