<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="casual"
        android:text="@string/welcome"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="96dp"
        android:fontFamily="casual"
        android:text="@string/about_alc"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/text_welcome"
        app:layout_constraintStart_toStartOf="@+id/text_welcome"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome" />

    <Button
        android:id="@+id/button_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="96dp"
        android:fontFamily="casual"
        android:text="@string/my_profile"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/button_about"
        app:layout_constraintStart_toStartOf="@+id/button_about"
        app:layout_constraintTop_toBottomOf="@+id/button_about" />
</android.support.constraint.ConstraintLayout>